[gd_scene load_steps=12 format=3 uid="uid://c0gul5vt2ly3f"]

[ext_resource type="Script" uid="uid://8yfrnavsikks" path="res://scripts/ui/01_menus/main_menu.gd" id="1_flhq8"]
[ext_resource type="FontFile" uid="uid://s25petjrnke" path="res://assets/fonts/LeagueScriptNumberOne.otf" id="2_ct055"]
[ext_resource type="FontFile" uid="uid://c14dpk564mpel" path="res://assets/fonts/OstrichSans-Heavy.otf" id="2_h1kbi"]
[ext_resource type="Texture2D" uid="uid://d012su23q1jh3" path="res://assets/sprites/backgrounds/title-screen-v3.png" id="3_dhmlp"]
[ext_resource type="FontFile" uid="uid://bx0evnh6upva6" path="res://assets/fonts/CoasterSans-Regular.otf" id="4_jk7nv"]
[ext_resource type="AudioStream" uid="uid://b6fy6tyv03j6y" path="res://assets/audio/effects/oh_my_goodness.wav" id="5_dhmlp"]
[ext_resource type="Texture2D" uid="uid://vmmfp77dkbcr" path="res://assets/sprites/ui/menus/WBAL_Feedback_QRcode.png" id="5_p0q51"]
[ext_resource type="Texture2D" uid="uid://c25s2esj06wd8" path="res://assets/sprites/backgrounds/bg_notebook.png" id="6_y4aia"]
[ext_resource type="Texture2D" uid="uid://beiuoshkmqvob" path="res://assets/sprites/ui/menus/WBAL_Credits_Logo_blk.png" id="8_h4dpu"]
[ext_resource type="AudioStream" uid="uid://cqmkl6dndngra" path="res://assets/audio/effects/the_end.wav" id="8_ykpw6"]
[ext_resource type="Texture2D" uid="uid://0ux4kw5bporf" path="res://assets/sprites/ui/menus/WBAL_Controls_Screen_NoHands.png" id="10_h4dpu"]

[node name="MainMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_flhq8")

[node name="TitleScreen" type="Control" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="MainMenuButtons" type="VBoxContainer" parent="TitleScreen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -243.0
offset_top = 35.0
offset_right = 243.0
offset_bottom = 289.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 20

[node name="StartGame_Button" type="Button" parent="TitleScreen/MainMenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 70
text = "Start Game"

[node name="Controls_Button" type="Button" parent="TitleScreen/MainMenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 70
text = "Controls"

[node name="Credits_Button" type="Button" parent="TitleScreen/MainMenuButtons"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 70
text = "Credits"

[node name="Who_Are_You_Button" type="Button" parent="TitleScreen/MainMenuButtons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 70
text = "WHO IS DANIEL GREEN?"

[node name="Feedback_Button" type="Button" parent="TitleScreen/MainMenuButtons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 55
text = "Playtest Feedback
"

[node name="Quit_Button" type="Button" parent="TitleScreen/MainMenuButtons"]
visible = false
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 55
text = "Quit Game"

[node name="title_screem" type="Sprite2D" parent="TitleScreen"]
z_index = -9
position = Vector2(960, 540)
texture = ExtResource("3_dhmlp")

[node name="WIP_screen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="WIP_screen"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="wip_text" type="Label" parent="WIP_screen/VBoxContainer"]
layout_mode = 2
theme_override_constants/line_spacing = 5
theme_override_constants/paragraph_spacing = 5
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 80
text = "\"We'll Build A Ladder\" is a work in active development.

Gameplay, artwork, audio and other content 
may not reflect the final version of the game.

thank you for playing.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="wipContinueButton" type="Button" parent="WIP_screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 80
text = "Continue"

[node name="GameMode_Screen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="wip_text" type="Label" parent="GameMode_Screen"]
visible = false
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -732.0
offset_top = -219.0
offset_right = 732.0
offset_bottom = 219.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 5
theme_override_constants/paragraph_spacing = 5
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 80
text = "\"We'll Build A Ladder\" is a work in active development.

Gameplay, artwork, audio and other content 
may not reflect the final version of the game.

thank you for playing.
"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GameMode_text" type="Label" parent="GameMode_Screen"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 270.0
grow_horizontal = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 5
theme_override_constants/paragraph_spacing = 5
theme_override_fonts/font = ExtResource("4_jk7nv")
theme_override_font_sizes/font_size = 130
text = "Game Mode"
horizontal_alignment = 1
vertical_alignment = 1

[node name="VBoxContainer" type="HBoxContainer" parent="GameMode_Screen"]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -31.0
offset_bottom = 31.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 250
alignment = 1

[node name="TimerOff_Button" type="Button" parent="GameMode_Screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 85
text = "We'll Take Our Time"

[node name="TimerOff_Description_Text" type="Label" parent="GameMode_Screen/VBoxContainer/TimerOff_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -114.5
offset_top = 54.0
offset_right = 114.5
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 50
text = "Original Game"
horizontal_alignment = 1

[node name="TimerOn_Button" type="Button" parent="GameMode_Screen/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 85
text = "We'll Challenge Ourselves"

[node name="TimerOn_Description_Text" type="Label" parent="GameMode_Screen/VBoxContainer/TimerOn_Button"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -274.0
offset_top = 54.0
offset_right = 274.0
offset_bottom = 88.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 50
text = "Levels feature a 10-second timer"

[node name="OhMyGoodness" type="AudioStreamPlayer" parent="GameMode_Screen"]
stream = ExtResource("5_dhmlp")
volume_db = 0.5

[node name="PlaytestFeedback_Screen" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FeedbackGroup" type="Control" parent="PlaytestFeedback_Screen"]
anchors_preset = 0
offset_top = 50.0
offset_bottom = 50.0

[node name="PlaytestFeedback_Text" type="Label" parent="PlaytestFeedback_Screen/FeedbackGroup"]
layout_mode = 2
offset_left = 30.0
offset_right = 1023.0
offset_bottom = 160.0
size_flags_horizontal = 0
theme_override_fonts/font = ExtResource("2_ct055")
theme_override_font_sizes/font_size = 80
text = "Playtest Feedback"
vertical_alignment = 1

[node name="ThankYou_text" type="Label" parent="PlaytestFeedback_Screen/FeedbackGroup"]
layout_mode = 2
offset_left = 30.0
offset_top = 170.0
offset_right = 1291.0
offset_bottom = 262.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 10
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 60
text = "thank you for playing this test build of \"We'll Build A Ladder\".
you can leave feedback using the qr code below."
vertical_alignment = 1

[node name="FeedbackQRcode" type="Sprite2D" parent="PlaytestFeedback_Screen/FeedbackGroup"]
position = Vector2(304, 560)
scale = Vector2(1.15, 1.15)
texture = ExtResource("5_p0q51")

[node name="Feedback_MainMenu_button" type="Button" parent="PlaytestFeedback_Screen/FeedbackGroup"]
layout_mode = 2
offset_left = 30.0
offset_top = 860.0
offset_right = 233.0
offset_bottom = 909.0
pivot_offset = Vector2(30, 0)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 60
text = "Main Menu"

[node name="Credits_Screen" type="Control" parent="."]
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="Credits_Screen"]
layout_mode = 0
offset_left = 955.0
offset_top = 135.0
offset_right = 995.0
offset_bottom = 175.0

[node name="CreditsLogoBlk" type="Sprite2D" parent="Credits_Screen/VBoxContainer"]
texture = ExtResource("8_h4dpu")

[node name="Final_Credits_Text" type="Label" parent="Credits_Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -961.0
offset_top = -275.0
offset_right = 962.0
offset_bottom = 425.0
grow_horizontal = 2
grow_vertical = 2
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 50
text = "Game Design, Programming, Artwork and Audio: Daniel Green
Concept Development & Philosophical Collaborator: Kate Byrne

The Yeah! Coalition: Chloe, Henry, Mitchell, Nathanael, Olivia, Ruby, Sofia and Xiao-En 

Playtesters: Cassettewitch, Ian Brightwood, Kat Brightwood, Emma Fox, RGF, stephenfoxyeah!, SpiceCake
 
Thank You:
Renato Baroni, Pippin Barr, Andrew Bennett, Ian Brightwood, Kat Brightwood, Samuel Bruce, V Buckenham,
Alex Byrne, Ben Byrne, Josh Conry, Rachelle Conry, Ines Cabral Proenca, Laura Carey, Mads de Silva Wheeler,
Ben Elgart, Alyson Dalby, Fede Fasce, Rebecca Flynn, Dragos Farcas, Emma Fox, Stephen Fox, Sophia Goldberg, 
Maddalena Grattanola, Joanne Green, Kristina Green, Ricky Haggett, Sue Hearn, Matthew Hilzinger, Thomas Hunt,
Miyuki Jokiranta, Jon Klassen, Michelle Klomp, Julia Mascetti, Richard Milward, Nick Murray, Karolina Novak,
Seb Quack, Sly-Tone Cafe, Julian Ramundi, Harry Smyth, Riana Suen, Jo Summers, Vicky Wong 
and Kate Byrne, for everything.

full credits available at: https://iamdanielgreen.itch.io/well-build-a-ladder

Thank you for playing. Ceasefire now. freedom for palestine."
horizontal_alignment = 1

[node name="Credits_MainMenu_Button" type="Button" parent="Credits_Screen"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -93.0
offset_top = -86.0
offset_right = 93.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 55
text = "MAIN MENU"
icon_alignment = 1

[node name="WBAL_Credits_Text" type="Label" parent="Credits_Screen"]
visible = false
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -725.0
offset_top = 55.0
offset_right = 725.0
offset_bottom = 260.0
grow_horizontal = 2
size_flags_horizontal = 4
theme_override_fonts/font = ExtResource("2_ct055")
theme_override_font_sizes/font_size = 80
text = "We'll Build A Ladder"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Name_Credits_Text" type="Label" parent="Credits_Screen/WBAL_Credits_Text"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -462.0
offset_top = 32.5
offset_right = 462.0
offset_bottom = 142.5
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 60
text = "A game by Daniel Green"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Prototype_Credits_Text" type="Label" parent="Credits_Screen/WBAL_Credits_Text"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -913.0
offset_top = 47.5
offset_right = 913.0
offset_bottom = 704.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/line_spacing = 3
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 60
text = "A prototype by Daniel Green


Game Concept & Philosophical Collaborator: Kate Byrne
Game Design, Programming, Artwork and Audio: Daniel Green


This work uses assets by the following creators:

\"Input Prompts\" by Kenney: https://www.kenney.nl/assets/input-prompts

 \"Ostrich Sans Heavy\" by Tyler Finck: 
https://www.theleagueofmoveabletype.com/ostrich-sans

\"League script\" by Haley Fiege: https://www.theleagueofmoveabletype.com/league-script"
horizontal_alignment = 1

[node name="CreditsScreen_Buttons" type="HBoxContainer" parent="Credits_Screen"]
visible = false
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -316.5
offset_top = -150.0
offset_right = 316.5
offset_bottom = -104.0
grow_horizontal = 2
grow_vertical = 0

[node name="Credits_Feedback_Button" type="Button" parent="Credits_Screen/CreditsScreen_Buttons"]
layout_mode = 2
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 55
text = "PLAYTEST FEEDBACK"

[node name="TheEnd" type="AudioStreamPlayer" parent="Credits_Screen"]
stream = ExtResource("8_ykpw6")

[node name="Controls_Screen" type="Control" parent="."]
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ControlsPNG" type="Sprite2D" parent="Controls_Screen"]
position = Vector2(960, 540)
texture = ExtResource("10_h4dpu")

[node name="Controls_Main_Menu_Button" type="Button" parent="Controls_Screen"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_top = 410.0
offset_right = 93.0
offset_bottom = 456.0
grow_horizontal = 2
grow_vertical = 2
theme_override_fonts/font = ExtResource("2_h1kbi")
theme_override_font_sizes/font_size = 55
text = "Main Menu"

[node name="bgNotebook" type="Sprite2D" parent="."]
visible = false
z_index = -10
position = Vector2(960, 540)
texture = ExtResource("6_y4aia")

[connection signal="pressed" from="TitleScreen/MainMenuButtons/StartGame_Button" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="TitleScreen/MainMenuButtons/Controls_Button" to="." method="_on_controls_button_pressed"]
[connection signal="pressed" from="TitleScreen/MainMenuButtons/Credits_Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="TitleScreen/MainMenuButtons/Who_Are_You_Button" to="." method="_on_credits_button_pressed"]
[connection signal="pressed" from="TitleScreen/MainMenuButtons/Feedback_Button" to="." method="_on_feedback_button_pressed"]
[connection signal="pressed" from="TitleScreen/MainMenuButtons/Quit_Button" to="." method="_on_quit_button_pressed"]
[connection signal="pressed" from="WIP_screen/VBoxContainer/wipContinueButton" to="." method="_on_wip_continue_button_pressed"]
[connection signal="pressed" from="GameMode_Screen/VBoxContainer/TimerOff_Button" to="." method="_on_timer_off_button_pressed"]
[connection signal="pressed" from="GameMode_Screen/VBoxContainer/TimerOn_Button" to="." method="_on_timer_on_button_pressed"]
[connection signal="pressed" from="PlaytestFeedback_Screen/FeedbackGroup/Feedback_MainMenu_button" to="." method="_on_feedback_main_menu_button_pressed"]
[connection signal="pressed" from="Credits_Screen/Credits_MainMenu_Button" to="." method="_on_credits_main_menu_button_pressed"]
[connection signal="pressed" from="Credits_Screen/CreditsScreen_Buttons/Credits_Feedback_Button" to="." method="_on_credits_feedback_button_pressed"]
[connection signal="pressed" from="Controls_Screen/Controls_Main_Menu_Button" to="." method="_on_controls_main_menu_button_pressed"]
